--- a/index.rmd
+++ b/index.rmd
@@ -1,13 +1,8 @@
 ---
 title: "Tutorials for microbiome analysis"
-output:
-  rmdformats::readthedown:
-    self_contained: true
-    thumbnails: true
-    lightbox: true
-    gallery: true
-    use_bookdown: false
-    highlight: haddock
+output: 
+  prettydoc::html_pretty:
+    theme: lumen
 ---
 
 # Tutorials
